fix for alignment issues

--- a/src/trade/tradeDialog.css
+++ b/src/trade/tradeDialog.css
@@ -31,10 +31,17 @@
 
 .trade-fields ul li select.contract-category-display + .ui-selectmenu-button { width: 160px !important; }
 
+.trade-fields .categories-row {padding: 3px 5px; }
+
+.trade-fields .duration-row li,
+.trade-fields .date-start-row li,
+.trade-fields .categories-row li {height: 30px; }
+
 .trade-fields .categories-row li.tick-quote {
   position: relative;
   top: 4px;
   left: 40px;
+  height: 30px;
 }
 .trade-fields .categories-row li.tick-quote span {
   background: #29ABE2;
@@ -116,10 +123,11 @@
     justify-content: center;
 }
 
-.trade-fields ul li { text-align: left; }
+.trade-fields ul li { text-align: left;}
 .trade-fields ul li:nth-child(1) { width:130px; }
 .trade-fields ul li:nth-child(2n) { width:110px; }
 .trade-fields ul li:nth-child(2n+3) { width:100px; }
+.trade-fields .ui-selectmenu-button { height: 30px !important; }
 
 .trade-fields ul li:nth-child(1) select + .ui-selectmenu-button { min-width: 120px !important; }
 
@@ -129,8 +137,12 @@
 .trade-fields ul li:nth-child(2) input { width: 85px !important; }
 .trade-fields ul li:nth-child(3) input { width: 85px !important; }
 
-.trade-fields ul li:nth-child(2) input:not([step]) { width: 100px !important; }
-.trade-fields ul li:nth-child(3) input:not([step]) { width: 100px !important; }
+.trade-fields ul li:nth-child(2n) input:not([step]),
+.trade-fields ul li:nth-child(2n+3) input:not([step]) {
+  width: 100px !important;
+  padding:0;
+  height: 30px;
+}
 
 .trade-fields ul li select.date-start-select + .ui-selectmenu-button { width: 115px !important }
 
@@ -138,7 +150,7 @@
     .trade-fields ul.contract-displays {
         background: #c2c1c1;
         padding: 10px 0;
-        margin: 5px 0 0 0;
+        margin: 0;
     }
 
     .trade-fields ul.contract-displays li {
@@ -161,13 +173,8 @@
     .trade-fields ul.contract-displays li:first-child:before { content: none; }
 /*#endregion*/
 
-.trade-fields input.datepicker,
-.trade-fields input.timepicker {
-    margin-bottom: 5px;
-}
-
 .trade-fields ul li input.date-expiry-date { width: 100px; }
-.trade-fields ul li input.date-expiry-hour { width: 95px; }
+.trade-fields ul li input.date-expiry-hour { width: 100px; }
 
 /* override timepciker styles */
 .ui-timepicker-table td a {
